--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>👁️ The Universal Gematria Detector</title>
+    <title>Antichrist Suspect Detector</title>
     <script src="https://cdn.jsdelivr.net/npm/gun/gun.js"></script>
     <style>
         body { background: #0a0a0a; color: #00ff41; font-family: monospace; padding: 20px; text-align: center; }
